app/(solutions)/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --background: 0 0% 100%;
        --foreground: 240 10% 3.9%;
        --card: 0 0% 100%;
        --card-foreground: 240 10% 3.9%;
        --popover: 0 0% 100%;
        --popover-foreground: 240 10% 3.9%;
        --primary: 240 5.9% 10%;
        --primary-foreground: 0 0% 98%;
        --secondary: 240 4.8% 95.9%;
        --secondary-foreground: 240 5.9% 10%;
        --muted: 240 4.8% 95.9%;
        --muted-foreground: 240 3.8% 46.1%;
        --accent: 240 4.8% 95.9%;
        --accent-foreground: 240 5.9% 10%;
        --destructive: 0 84.2% 60.2%;
        --destructive-foreground: 0 0% 98%;
        --border: 240 5.9% 90%;
        --input: 240 5.9% 90%;
        --ring: 240 5.9% 10%;
        --radius: 0.5rem;
    }

    .dark {
        --background: 240 10% 3.9%;
        --foreground: 0 0% 98%;
        --card: 240 10% 3.9%;
        --card-foreground: 0 0% 98%;
        --popover: 240 10% 3.9%;
        --popover-foreground: 0 0% 98%;
        --primary: 0 0% 98%;
        --primary-foreground: 240 5.9% 10%;
        --secondary: 240 3.7% 15.9%;
        --secondary-foreground: 0 0% 98%;
        --muted: 240 3.7% 15.9%;
        --muted-foreground: 240 5% 64.9%;
        --accent: 240 3.7% 15.9%;
        --accent-foreground: 0 0% 98%;
        --destructive: 0 62.8% 30.6%;
        --destructive-foreground: 0 0% 98%;
        --border: 240 3.7% 15.9%;
        --input: 240 3.7% 15.9%;
        --ring: 240 4.9% 83.9%;
    }
}

@layer base {
    * {
        @apply border-border;
    }

    html {
        scroll-behavior: smooth !important;
    }
    body {
        @apply bg-background text-foreground;
        margin: 0;
        padding: 0;
        box-sizing: border-box;
        padding: 20px;
        padding-left: 20px !important;
        padding-right: 20px !important;
        overflow-x: hidden;
        --keyboard-zindex: 3000;
        --keyboard-padding-top: 0px;
    }
}

p {
    margin: 1rem;
}

.katex {
    font-size: 2rem !important;
}

@media (max-width: 694px) {
    math-field {
        font-size: medium !important;
    }
}

.fancy-1 {
    @apply rounded-md;
    background: radial-gradient(farthest-side at bottom, black 98%, transparent)
            bottom/calc(2 * var(--d, 7px)) var(--d, 0) no-repeat,
        linear-gradient(black 0 0) bottom / 15px 3px no-repeat;
    transition: 0.5s;
}
.fancy-1:hover {
    --d: 150%;
    color: #fff;
}

.dark .fancy-1 {
    @apply rounded-md;
    background: radial-gradient(farthest-side at bottom, white 98%, transparent)
            bottom/calc(2 * var(--d, 7px)) var(--d, 0) no-repeat,
        linear-gradient(white 0 0) bottom / 15px 3px no-repeat;
    transition: 0.5s;
}
.dark .fancy-1:hover {
    --d: 150%;
    color: #000;
}

[data-radix-popper-content-wrapper] {
    z-index: 500000000 !important;
}
.firebase-emulator-warning {
    @apply sr-only;
}

math-field {
    --contains-highlight-background-color: rgba(0, 120, 212, 0.2);
}

.go-away {
    @apply overflow-hidden;
    width: fit-content;
    /* make this element's width be 0 after 6 seconds */
    animation: go-away 1s 3s linear forwards;
}

@keyframes go-away {
    100% {
        width: 0;
        padding: 0;
        margin: 0;
    }
}

